[package]
name = "ndoors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }

tokio = { version = "1.21.2", features = ["full"]}
axum = { version = "0.5.16", features = ["ws"]}
tower-http = { version = "0.3.4", features = ["fs", "trace"]}
anyhow = "1.0"
serde_json = "1.0"
dashmap = "5.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "ndoors"
path = "src/cli.rs"

[[bin]]
name = "ndoors-server"
path = "src/server.rs"
